# sdd-pipeline

./: .coverage  .env.example  .gitignore  AGENTS.md  CHROMA_DEBUG_GUIDE.md  CHROMA_TESTING.md  CLAUDE.md  HANDOFF.md  MONITORING.md  README.md  README_architecture_temp.md  article_sanitizer.py  debug_crawl4ai_raw.py  examples.md  logger.py  main.py  pipeline.py  pyproject.toml  repopulate_chroma.py  tail_events.py  watch_events.py
artigos/: airflow-e-dagster_20260425_2220.md  ansible_20260426_1431.md  datacontract-cli_20260425_2320.md  github-actions-e-gitlab-ci_20260426_1356.md
cli/: prompts.py
enrichment/: coordinator.py
evals/: __init__.py  batch_runner.py  cases.jsonl
llm/: __init__.py  circuit_breaker.py  client.py  fallback.py  provider_config.py  structured.py  token_counter.py
memory/: memory_store.py  research_chroma.py  research_persistence.py
orchestration/: __init__.py  decision.py  langgraph_runner.py
output/: debug_analysis.md  debug_context_ansible.md  debug_context_docker.md  debug_context_github_actions.md  debug_context_gitlab_ci.md  debug_context_nonexistent-tool.md  debug_research_ansible.md  debug_research_chroma_enriched.md  debug_research_github_actions.md  debug_research_gitlab_ci.md  evidence_pack.json  metrics.json  pipeline_events.jsonl  urls_ansible.txt  urls_github actions.txt  urls_gitlab ci.txt
pipeline_stages/: analysis.py  critic.py  evidence.py  relevance.py  research.py  writer.py
prompts/: __init__.py  analyst.yaml  critic.yaml  manager.py  orchestrator.yaml  research_enricher.yaml  researcher.yaml  writer.yaml
(+143 files in other folders)
